crates/swc_ecma_parser/tests/test262-error-references/fail/1c4f1040317d4869.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/1c4f1040317d4869.js:1:7
  |
1 | break 1;
  |       ^

